# search-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  test.yml
src/search_api/: __init__.py  chat_service.py  config.py  main.py  meilisearch_client.py  models.py  ollama_client.py  search_service.py  summarize_service.py
tests/unit/: test_chat_service.py  test_meilisearch_client.py  test_search_endpoint.py  test_summarize_endpoint.py
